@@ -1,4 +1,4 @@
-MODULE		coda-idl
+MODULE		coda_idl
 DESCRIPTION	CODA
 VERSION		@VERSION@
 SOURCE		S[&]T
