@@ -1,3 +1,7 @@
+* The CODA IDL DLM files have been renamed from coda-idl.* to coda_idl.*
+  (to better support CMake builds on Windows). Remove any old coda-idl.*
+  files from the installation directory to prevent errors.
+
 * The CODA C library now uses thread-local storage (TLS) variables
   internally to allow CODA to be used in multi-threaded applications.
   You will still have to call coda_init() separately for each thread and
